--- a/src/scss/layouts/_pag18.scss
+++ b/src/scss/layouts/_pag18.scss
@@ -73,13 +73,24 @@
                 color: #fff;
                 margin-left: 40%;
                 margin-top: 8%;
-                font-size: 4vh;
+                font-size: 4vh; 
+                transition: all .4s ease-in;
+                overflow: hidden;
                 @include m.telefono{
                     margin-left: 35%;
                     margin-top: 10%;
                     height: 40px;
                     width: 100px;
                 }
+            }
+            input:after{
+                background: #E1E7ED;
+                content: "";
+                height: 100%;
+                left: 0;
+                top: 0;
+                transition: all .3s ease;
+                width: 0;
             }
         }
     }
