--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -4,6 +4,7 @@
 .cuestionario2{
     display: block;
     .contenedor2{
+        display: none;
         .contenedor1{
             display: flex;
             .persona1{
@@ -59,7 +60,7 @@
                 height: 15%;
                 min-height: 120px;
             }
-            button{
+            input{
                 align-items: center;
                 height: 60px;
                 width: 160px;
@@ -79,9 +80,13 @@
             }
         }
     }
+    .contenedor2.activo{
+        display: block;
+    }
 }
 
 .contenido21{
+    display: none;
     .cuadro2click{
         display: flex;
         background-color: #D9EDEF;
@@ -160,46 +165,55 @@
             
         }
     }
-    .contenedor21final{
-        .cuadro-amarillo21{
-            display: flex;
-            background-color: #F9C931;
-            width:100%;
-            height: 50%;
-            min-height: 350px;
-            .persona1-21{
-                position: relative;
-                z-index: 2;
-                img{
-                    height: 70%;
-                    width: 20%;
-                    min-width: 230px;
-                    margin-top: 55%;
-                    margin-left: 7%;
-                }
+}
+
+.contenido21.activo{
+    display: block;
+}
+
+.contenedor21final{
+    display: none;
+    .cuadro-amarillo21{
+        display: flex;
+        background-color: #F9C931;
+        width:100%;
+        height: 50%;
+        min-height: 350px;
+        .persona1-21{
+            position: relative;
+            z-index: 2;
+            img{
+                height: 70%;
+                width: 20%;
+                min-width: 230px;
+                margin-top: 55%;
+                margin-left: 7%;
             }
-            .cuadro-azul21{
-                position: relative;
-                z-index: 1;
-                width:135%;
-                height: 40%;
-                background-color:  #002F87 ;
-                margin-left: -35%;
-                margin-top: 10%;
-                padding-left: 50%;
-                p{
-                    width: 70%;
-                    height: 60%;
-                    min-height: 150px;
-                    border: solid 1px #fff;
-                    color: #fff;
-                    margin: 5%;
-                    text-align: center;
-                    padding: 3.2%;
-                    font-size: 1.1vw;
-                }
+        }
+        .cuadro-azul21{
+            position: relative;
+            z-index: 1;
+            width:135%;
+            height: 40%;
+            background-color:  #002F87 ;
+            margin-left: -35%;
+            margin-top: 10%;
+            padding-left: 50%;
+            p{
+                width: 70%;
+                height: 60%;
+                min-height: 150px;
+                border: solid 1px #fff;
+                color: #fff;
+                margin: 5%;
+                text-align: center;
+                padding: 3.2%;
+                font-size: 1.1vw;
             }
         }
     }
+}
 
+.contenedor21final.activo{
+    display: block;
 }
