avance parcial pag23

--- a/src/scss/layouts/_index.scss
+++ b/src/scss/layouts/_index.scss
@@ -19,6 +19,7 @@
 @forward 'pag20';
 @forward 'pag21';
 @forward 'pag22';
+@forward 'pag23';
 @forward 'pag24';
 @forward 'pag25';
 @forward 'pag26';
