--- a/src/scss/layouts/_pag27.scss
+++ b/src/scss/layouts/_pag27.scss
@@ -45,6 +45,10 @@
                 font-size: 2.2rem;
             }
         }
+
+        &.ocultar{
+            display: none;
+        }
     }
 
     #instruccionEvaluacion{
@@ -53,6 +57,10 @@
         color: v.$blanco;
         font-weight: 700;
         background: v.$azul1;
+
+        &.ocultar{
+            display: none;
+        }
     }
 
     #cont-inicioEvaluacion{
@@ -63,6 +71,10 @@
         
         a{
             @include m.boton(v.$amarillo);
+        }
+
+        &.ocultar{
+            display: none;
         }
     }
 
@@ -91,6 +103,10 @@
                     width: 60%;
                 }
             }
+        }
+
+        &.ocultar{
+            display: none;
         }
 
         .preguntas{
@@ -208,6 +224,188 @@
 
         a{
             @include m.boton(v.$amarillo);
+        }
+
+        &.ocultar{
+            display: none;
+        }
+    }
+
+    #retro-positiva{
+
+        display: none;
+        transition: all .3s ease;
+
+        &.visualizar{
+            display: block;
+        }
+
+        .mensaje{
+            padding: 2rem;
+            background: v.$azulRey;
+
+            p{
+                text-align: center;
+                color: v.$blanco;
+                font-size: 2.4rem;
+                font-weight: 700;
+            }
+        }
+
+        .cont-calificacion{
+            padding: 2rem;
+
+            p{
+                text-align: center;
+                font-size: 4.2rem;
+                font-weight: 700;
+            }
+        }
+
+        .final{
+
+            @include m.grid(2, 2rem);
+
+            @include m.tablet{
+                @include m.grid(1, 2rem);
+            }
+
+            .cont-imagen{
+                margin: 0;
+            }
+
+            .cont-info{
+                display: flex;
+                flex-direction: column;
+
+                .parrafo{
+                    height: 50%;
+                    background: v.$amarillo;
+                    padding: 2rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    p{
+                        text-align: center;
+                        font-weight: 500;
+                        color: v.$blanco;
+                        font-size: 2rem;
+                    }
+
+                    @include m.tablet{
+                        margin-bottom: 2rem;
+                    }
+                }
+
+                .botones{
+                    height: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    
+                    @include m.tablet{
+                        width: 100%;
+                        flex-direction: row;
+                        padding: 2rem;
+                    }
+
+                    @include m.telefono{
+                        flex-direction: column;
+                    }
+
+                    #registrar{
+                        @include m.boton(v.$verde);
+                        width: 18rem;
+                        text-align: center;
+
+                        @include m.telefono{
+                            margin-bottom: 2rem;
+                        }
+                    }
+
+                    #cerrar{
+                        @include m.boton(v.$azulRey);
+                        width: 18rem;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+
+    #retro-negativa{
+
+        display: none;
+        transition: all .3s ease;
+
+        &.visualizar{
+            display: block;
+
+            @include m.escritorio{
+                display: flex;
+                flex-direction: column-reverse;
+            }
+        }
+
+        .mensaje{
+            padding: 2rem;
+            background: v.$colorFuente;
+
+            p{
+                color: v.$blanco;
+                font-size: 2.4rem;
+                text-align: center;
+            }
+        }
+
+        .final{
+            @include m.grid(2, 2rem);
+
+            @include m.escritorio{
+                @include m.grid(1, 2rem);
+                margin-bottom: 4rem;
+            }
+
+            .cont-imagen{
+                width: 35rem;
+                height: 50rem;
+                margin: 0;
+
+                @include m.escritorio{
+                    margin: 0 auto;
+                }
+
+                @include m.tablet{
+                    width: 25rem;
+                    height: 35rem;
+                }
+            }
+
+            
+            .botones{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                #reintentar{
+                    @include m.boton(v.$rojo);
+                    transform: scale(2);
+
+                    @include m.escritorio{
+                        transform: scale(1.4);
+                    }
+
+                    &:hover{
+                        transform: scale(2.01);
+
+                        @include m.escritorio{
+                            transform: scale(1.5);   
+                        }
+                    }
+                }
+            }
         }
     }
 }
