--- a/src/scss/layouts/_pag06.scss
+++ b/src/scss/layouts/_pag06.scss
@@ -118,6 +118,64 @@
                 transition: all .3s ease;
             }
 
+            .btn-pag06{
+                animation-name: parpadeo;
+                animation-duration: 2s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+                -webkit-animation-name: parpadeo;
+                -webkit-animation-duration: 2s;
+                -webkit-animation-timing-function: linear;
+                -webkit-animation-iteration-count: infinite;
+
+            }
+
+            .btn-pag06:hover{
+                animation-play-state: paused;
+            } 
+
+            @-moz-keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+              
+            @-webkit-keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+              
+            @keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+
             .img-libro{
                 width: 80%;
 
@@ -129,7 +187,6 @@
             a{
                 display: block;
             }
-
 
             #cuadro1{
                 @include m.cuadrosPag06(v.$azulPag06, v.$azulFuertePag06, center);
