--- a/src/scss/layouts/_pag23.scss
+++ b/src/scss/layouts/_pag23.scss
@@ -151,15 +151,91 @@
         }
     }
     .nivel2pag23{
+        display: flex;
         .cuadro-info{
-            width: 100%;
-            height: 50%;
+            width: 90%;
             background-color: #E9EBED;
             background-image: url(/build/img/contenido/Pag23/esquinas.svg);
             background-repeat: no-repeat;
+            background-position-x: center;
+            background-position-y: center ;
+            background-size: 88%;
+            height: 70%;
+            padding: 6% 3%;
         }
         #info1{
+            display: none;
+            position:absolute;
+            font-size: .9vw;
+            margin: 0 2%;
+            max-height: 430px;
+            max-width: 200px;
+            position: absolute;
+            width: 15%;
+            padding: 2.5% 1%;
+            height: 45%;
+            ul{
+                li::marker{
+                    color: #0C8F5A;
+                }
+            }
+        }
+        #info2{
+            display: none;
+            height: 45%!important;
+            left: 25.5%;
+            margin-right: 1.5%;
+            max-width: 200px;
+            padding: 6% 2%;
+            position: absolute;
+            text-align: center;
+            width: 68%;
+        }
+        #info3{
+            background-size: 75%;
+            display: none;
+            font-size: 1vw;
+            left: 40%;
+            margin-right: 1%;
+            /* max-width: 200px; */
+            position: absolute;
+            width: 16%;
+            height: 45%;
+            padding: 4.5% 2.5%;
+            ul{
+                li::marker{
+                    color: #0C8F5A;
+                }
+            }
+        }
 
+        #info4{
+            background-size: 77%;
+            display: none;
+            height: 45%;
+            left: 57.4%;
+            margin-right: 1%;
+            /* max-width: 200px; */
+            /* min-height: 397px; */
+            padding: 5% 2%;
+            position: absolute;
+            text-align: center;
+            width: 15%;
+        }
+
+        #info5{
+            background-size: 75%;
+            display: none;
+            height: 45%;
+            left: 73.6%;
+            padding: 5% 3%;
+            position: absolute;
+            width: 16%;
+            ul{
+                li::marker{
+                    color: #0C8F5A;
+                }
+            }
         }
     }
 }
