--- a/src/scss/layouts/_pag15.scss
+++ b/src/scss/layouts/_pag15.scss
@@ -2,37 +2,37 @@
 @use '../base/variables' as v;
 
 
-#instrucciones{
-    position: relative;
-    display: flex;
-    background: v.$azulClaro2;
-    overflow: visible;
-    height: 30%;
-    width: 50%;
+// #instrucciones{
+//     position: relative;
+//     display: flex;
+//     background: v.$azulClaro2;
+//     overflow: visible;
+//     height: 30%;
+//     width: 50%;
 
-    @include m.tablet{
-        width: 100%;
-    }
+//     @include m.tablet{
+//         width: 100%;
+//     }
 
-    @include m.telefono{
-        height: 15rem;
-    }
+//     @include m.telefono{
+//         height: 15rem;
+//     }
 
-    .mano{
-        padding: 2rem;
-        height: 10rem;
-        width: 13rem;
+//     .mano{
+//         padding: 2rem;
+//         height: 10rem;
+//         width: 13rem;
 
-        @include m.telefono{
-            width: 20rem;
-        }
-    }
+//         @include m.telefono{
+//             width: 20rem;
+//         }
+//     }
 
-    p{
-        padding: 2rem;
-        text-align: center;
-    }
-}
+//     p{
+//         padding: 2rem;
+//         text-align: center;
+//     }
+// }
 
 #cont-verde{
     position: relative;
@@ -45,11 +45,11 @@
         height: 40rem;
     }
 
-    .globos12{
-        display: none;
-        opacity: 0;
-        transition: all .3s ease;
-    }
+    // .globos12{
+    //     display: none;
+    //     opacity: 0;
+    //     transition: all .3s ease;
+    // }
 
     .personaje1{
         position: relative;
@@ -87,10 +87,10 @@
             top: 0;
         }
 
-        &.cuadros_activos{
-            display: block;
-            opacity: 1;
-        }
+        // &.cuadros_activos{
+        //     display: block;
+        //     opacity: 1;
+        // }
 
     }
 }
@@ -107,11 +107,11 @@
         @include m.grid(1, 0);
     }
 
-    .globos12{
-        display: none;
-        opacity: 0;
-        transition: all .3s ease;
-    }
+    // .globos12{
+    //     display: none;
+    //     opacity: 0;
+    //     transition: all .3s ease;
+    // }
 
     #cont-azul{
         overflow: hidden;
@@ -171,10 +171,10 @@
                 margin-top: 0;
             }
 
-            &.cuadros_activos{
-                display: block;
-                opacity: 1;
-            }
+            // &.cuadros_activos{
+            //     display: block;
+            //     opacity: 1;
+            // }
         }
     }
 
@@ -207,10 +207,10 @@
                 
                 }
 
-                &.cuadros_activos{
-                    display: block;
-                    opacity: 1;
-                }
+                // &.cuadros_activos{
+                //     display: block;
+                //     opacity: 1;
+                // }
             }
 
             #correo{
