--- a/src/scss/layouts/_pag23.scss
+++ b/src/scss/layouts/_pag23.scss
@@ -239,3 +239,118 @@
         }
     }
 }
+
+.contenedor2Pag23{
+    .cuadro2ClickPag23{
+        display: flex;
+        width: 100%;
+        height: 30%;
+        background-color: #D9EDEF;
+        .icon2c{
+            height:5%;
+            width: 5%;
+            margin-left:20% ;
+            margin-top: 1%;
+        }
+        p{
+            font-size: 1.2vw;
+            margin-left: 2%;
+            margin-top: 2%;
+        }
+    }
+    .contenido2Pag23{
+        display: flex;
+        .columnaLogDep{
+            display: block;
+            width: 20%;
+            .logDep{
+                margin-top: 3%;
+                border-radius: 5px;
+                width: 90%;
+            }
+            #Dep1{
+                //width: 20%;
+                height: 20%;
+                padding: 7% 32%;
+                background-color: #FFF1EE;
+                .logoDep1{
+                    img{
+                        width: 77%;
+                        height: 30%;
+                    }
+                }
+            }
+            #Dep2{
+                //width: 20%;
+                padding: 13% 7%;
+                min-height: 140px;
+                background-color: #F9F3E0;
+                .logoDep2{
+                    img{
+                        height: 40%;
+                    }
+                }
+            }
+            #Dep3{
+                //width: 20%;
+                padding: 4% 14% 4% 10%;
+                min-height: 140px;
+                background-color: #EEF8F4;
+                .logoDep3{
+                    img{
+                        width: 100%;
+                        height: 30%;
+                    }
+                }
+            }
+            #Dep4{
+                //width: 20%;
+                padding: 4% 14%;
+                min-height: 140px;
+                background-color: #E1E7ED;
+                .logoDep4{
+                    img{
+                        width: 100%;
+                        height: 30%;
+                    }
+                }
+            }
+        }
+        .columnaInfo{
+            display: block;
+            width: 60%;
+            .infoDepCol2{
+                display: none;
+                width: 65%;
+                margin-top: 3%;
+                font-size: 1.2vw;
+                text-align: center;
+            }
+            #info1Col2{
+                position: absolute;
+                top: 35%;
+                background-color: #FFF1EE;
+                padding: 1%;
+            }
+            #info2Col2{
+                position: absolute;
+                top: 46%;
+                padding: 1.3% 1.25%;
+                background-color: #F9F3E0;
+            }
+            #info3Col2{
+                position: absolute;
+                top: 59%;
+                padding: 2% 5%;
+                background-color: #EEF8F4;
+            }
+            #info4Col2{
+                position: absolute;
+                top: 72%;
+                padding: 2.5% 7.5%;
+                background-color: #E1E7ED;
+            }
+        }
+    }
+    
+}
