--- a/src/scss/layouts/_pag23.scss
+++ b/src/scss/layouts/_pag23.scss
@@ -173,7 +173,7 @@
             position: absolute;
             width: 15%;
             padding: 2.5% 1%;
-            height: 45%;
+            height: 20%;
             ul{
                 li::marker{
                     color: #0C8F5A;
@@ -182,7 +182,7 @@
         }
         #info2{
             display: none;
-            height: 45%!important;
+            height: 20%!important;
             left: 25.5%;
             margin-right: 1.5%;
             max-width: 200px;
@@ -200,7 +200,7 @@
             /* max-width: 200px; */
             position: absolute;
             width: 16%;
-            height: 45%;
+            height: 20%;
             padding: 4.5% 2.5%;
             ul{
                 li::marker{
@@ -212,7 +212,7 @@
         #info4{
             background-size: 77%;
             display: none;
-            height: 45%;
+            height: 20%;
             left: 57.4%;
             margin-right: 1%;
             /* max-width: 200px; */
@@ -226,7 +226,7 @@
         #info5{
             background-size: 75%;
             display: none;
-            height: 45%;
+            height: 20%;
             left: 73.6%;
             padding: 5% 3%;
             position: absolute;
@@ -241,6 +241,7 @@
 }
 
 .contenedor2Pag23{
+    margin-top: 25%;
     .cuadro2ClickPag23{
         display: flex;
         width: 100%;
@@ -328,25 +329,25 @@
             }
             #info1Col2{
                 position: absolute;
-                top: 35%;
+                top: 48.5%;
                 background-color: #FFF1EE;
                 padding: 1%;
             }
             #info2Col2{
                 position: absolute;
-                top: 46%;
+                top: 57.5%;
                 padding: 1.3% 1.25%;
                 background-color: #F9F3E0;
             }
             #info3Col2{
                 position: absolute;
-                top: 59%;
+                top: 67.5%;
                 padding: 2% 5%;
                 background-color: #EEF8F4;
             }
             #info4Col2{
                 position: absolute;
-                top: 72%;
+                top: 78%;
                 padding: 2.5% 7.5%;
                 background-color: #E1E7ED;
             }
