:bug: Areglos nav

--- a/src/scss/layouts/_pag14.scss
+++ b/src/scss/layouts/_pag14.scss
@@ -218,6 +218,11 @@
             }
         }
 
+        .cont-imagen{
+            
+            height: 8rem;
+        }
+
         #pc-1{
             grid-area: pc1;
         }
