--- a/src/scss/layouts/_pag27.scss
+++ b/src/scss/layouts/_pag27.scss
@@ -39,6 +39,15 @@
             font-size: 2.8rem;
             font-weight: 700;
             z-index: 1;
+            align-self: flex-end;
+
+            @include m.escritorioHD{
+                font-size: 2.2rem;
+            }
+            
+            @include m.escritorio{
+                font-size: 1.8rem;
+            }
 
             @include m.tablet{
                 width: 100%;
