--- a/src/scss/patria/_mal.scss
+++ b/src/scss/patria/_mal.scss
@@ -102,7 +102,13 @@
                 }
 
                 .cont-imagen{
-                    margin: 0 auto;
+                    margin: 0 auto;cursor: pointer;
+                    transition: all .3s ease;
+
+                    &:hover{
+                        transform: scale(1.05);
+                        box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.31);
+                    }
                 }
             }
         }
