--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -12,6 +12,7 @@
                 width:14%;
                 padding-left: 10px;
                 z-index: 1;
+                top: 15.5%;
                 @include m.tablet{
                     width: 20%;
                     margin-top: 10%;
@@ -112,7 +113,7 @@
             width: 140%;
             .cuadroC1{
                 display: flex;
-                width: 100%;
+                width: 140%;
                 height:20%;
                 text-align: center;
                 margin-top: 2%;
@@ -121,7 +122,7 @@
                     width: 90%;
                     height: 90%;
                     padding: 3% 3%;
-                    font-size: 1.1vh;
+                    font-size: 1.5vh;
                 }
                 .pin{
                     align-items: center;
@@ -133,6 +134,31 @@
                     margin-left: 6%;
                 }
             } 
+            .cuadroC1#respuesta1pag21.correcto{
+                p{
+                    background-color: #E96247;
+                }
+            }
+            .cuadroC1#respuesta2pag21.correcto{
+                p{
+                    background-color: #870051;
+                }
+            }
+            .cuadroC1#respuesta3pag21.correcto{
+                p{
+                    background-color: #F9C931;
+                }
+            }
+            .cuadroC1#respuesta4pag21.correcto{
+                p{
+                    background-color: #7AA0DD;
+                }
+            }
+            .cuadroC1#respuesta5pag21.correcto{
+                p{
+                    background-color: #002F87;
+                }
+            }
         }
         .columna2{
             width: 100%;
@@ -140,15 +166,15 @@
             .cuadroC2{
                 display: flex;
                 width: 100%;
-                height: 15%;
-                margin-top: 2%;
+                height: 20%;
+                margin-top: 1%;
                 padding: 2.5%;
                 text-align: center;
                 p{
                     background-color: #0C8F5A;
                     width: 90%;
                     height: 90%;
-                    font-size: 0.7vw;
+                    font-size: 0.8vw;
                     text-align: center;
                     padding-top: 4%;
                 }
@@ -162,8 +188,80 @@
                     margin-right: 6%;
                 }
             }
-            
+            .cuadroC2#contenedor1.correcto{
+                p{
+                    background-color: #F9C931;
+                }
+            }
+            .cuadroC2#contenedor2.correcto{
+                p{
+                    background-color: #002F87;
+                }
+            }
+            .cuadroC2#contenedor3.correcto{
+                p{
+                    background-color: #E96247;
+                }
+            }
+            .cuadroC2#contenedor4.correcto{
+                p{
+                    background-color: #870051;
+                }
+            }
+            .cuadroC2#contenedor5.correcto{
+                p{
+                    background-color: #7AA0DD;
+                }
+            }
         }
+        /*.lineas{
+            
+            #linea-nj{
+                position: absolute;
+                left:42.5%;
+                top: 38%;
+                img{
+                    height: 350px;
+                    width: 322px;
+                }
+            }
+            #linea-am{
+                position: absolute;
+                left: 38%;
+                top: 37.5%;
+                img{
+                    width: 332px;
+                    height: 300px;
+                }
+            }
+            #linea-az{
+                position: absolute;
+                left: 38%;
+                top: 37.5%;
+                img{
+                    width: 332px;
+                    height: 300px;
+                }
+            }
+            #linea-af{
+                position: absolute;
+                left: 38%;
+                top: 37.5%;
+                img{
+                    width: 332px;
+                    height: 300px;
+                }
+            }
+            #linea-vd{
+                position: absolute;
+                left: 38%;
+                top: 37.5%;
+                img{
+                    width: 332px;
+                    height: 300px;
+                }
+            }
+        }*/
     }
 }
 
