--- a/src/scss/layouts/_pag12.scss
+++ b/src/scss/layouts/_pag12.scss
@@ -56,7 +56,7 @@
                 width: 25rem;
             }
         }
-        #text{
+        #clic1-pag12{
             position: relative;
             bottom: 4rem;
             display: flex;
@@ -94,7 +94,7 @@
                     top: -3rem;
                 }
             }
-            .mano{
+            .mano1-pag12{
                 position: relative;
                 top: 2rem;
                 width: 120%;
@@ -301,16 +301,17 @@
             }
         }
 
-        #instrucciones{
+        #clic2-pag12{
             position: relative;
             display: flex;
             background: v.$azulClaro1;
             width: 30%;
             height: 10%;
             border-radius: 2rem;
-            padding: 2rem;
+            padding: 5rem 2rem 2rem 2rem;
             left: 5rem;
             top: 5rem;
+            text-align: center;
 
             @include m.tablet{
                 position: absolute;
@@ -326,7 +327,7 @@
             @include m.telefono{
                 top: 36rem;
                 height: 10rem;
-                padding-top: 1rem;
+                padding-top: 3rem;
             }
 
             p{
@@ -335,28 +336,31 @@
             }
 
 
-            .mano{
+            .mano2-pag12{
                 position: relative;
                 display: flex;
-                width: 50%;
+                width: 20%;
+                height: 10%;
 
                 @include m.escritorioHD{
-                    width: 70%;
+                    width: 25%;
+                    height: 15%;
+                    top: -1rem;
                 }
 
                 @include m.tablet{
-                    width: 9rem;
-                    height: 9rem;
+                    width: 5rem;
+                    height: 5rem;
                     left: -5rem;
-                    top: -2rem;
+                    top: -3rem;
                 }
 
                 @include m.telefono{
                     position: absolute;
                     left: 2rem;
                     top: 1rem;
-                    width: 10rem;
-                    height: 10rem;
+                    width: 6rem;
+                    height: 6rem;
                 }
             }
         }
