--- a/src/scss/layouts/_pag16.scss
+++ b/src/scss/layouts/_pag16.scss
@@ -117,31 +117,37 @@
             }
         }
 
-        #instrucciones{
+        #clic-pag16{
             display: flex;
             position: relative;
             justify-content: center;
             align-items: center;
             width: 100%;
             height: 30%;
+            background: v.$azulClaro1;
+            text-align: center;
 
             @include m.tablet{
                 height: 7rem;
             }
 
-            .mano{
-                width: 10%;
+            .mano-pag16{
+                position: relative;
+                left: -2rem;
+                width: 9%;
                 height: 25%;
 
+                @include m.escritorioHD{
+                    width: 12%;
+                }
                 @include m.tablet{
-                    height: 50%;
-                    width: 8%;
+                    height: 5rem;
+                    width: 6rem;
                     margin-top: 1rem;
                 }
 
                 @include m.telefono{
-                    width: 20%;
-                    height: 60%;
+                    left: 1rem;
                 }
             }
         }
