--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -117,6 +117,7 @@
                 height:20%;
                 text-align: center;
                 margin-top: 2%;
+                cursor: pointer;
                 p{
                     background-color: #F4F6F5;
                     width: 90%;
