--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -55,7 +55,7 @@
             border-radius: 10px;
             p{
                 color: #1A1E1E;
-                font-size: 1.9vw;
+                font-size: 1.5vw;
                 font-weight: bold;
             }
         }
@@ -70,7 +70,7 @@
             p{
                 color: #fff;
                 font-weight: bold;
-                font-size: 1.6vw;
+                font-size: 1.5vw;
             }
         }
         .cuadro-azul22-2{
@@ -81,7 +81,7 @@
             border-radius: 10px;
             p{
                 color: #002F87;
-                font-size: 1.65vw;
+                font-size: 1.5vw;
                 font-weight: bold;
                 max-height: 90px!important;
             }
@@ -224,13 +224,37 @@
         p{
             width: 85%;
             height: 10%;
-            padding: 1.1%;
-            font-size: 1.2vw;
+            padding: 0.4% 1%;
+            font-size: 1.1vw;
+        }
+    }
+    .boton{
+        input{
+            align-items: center;
+            height: 10%;
+            width: 12%;
+            background-color: #F9C931;
+            border: solid 2px #fff;
+            border-radius: 8px;
+            color: #fff;
+            margin-left: 1%;
+            margin-top: 1%;
+            font-size: 4vh;
+            @include m.telefono{
+                margin-left: 35%;
+                margin-top: 10%;
+                height: 40px;
+                width: 100px;
+            }
         }
     }
     .contenido2nv2pag22{
         display: flex;
+        height: 50%;
+        min-height: 450px;
         .opcionescolumna1{
+            margin-top: 3%;
+            width: 60%;
             .cuadro-opcion{
                 .c-opcion{
                     width: 4%;
@@ -242,89 +266,129 @@
                     width: 60%;
                     height: 15%;
                     margin-left: 5%;
-                    padding: 5%;
+                    padding: 4.5%;
                     border-radius: 5px;
                 }
             }
+            #contenedor1pag22.correcto{
+                .c-opcion{
+                    background-color: #7AA0DD;
+                }
+                p{
+                    background-color: #7AA0DD;
+                }
+            }
+            #contenedor2pag22.correcto{
+                .c-opcion{
+                    background-color: #0C8F5A;
+                }
+                p{
+                    background-color: #0C8F5A;
+                }
+                
+            }
+            #contenedor3pag22.correcto{
+                .c-opcion{
+                    background-color: #F9C931;
+                }
+                p{
+                    background-color: #F9C931;
+                }
+               
+            }
+
         }
         .columna2-22{
             display: block;
-            .img1{
-                height: 20%;
-                width: 40%;
-                margin-left: 15%;
-                margin-top: 10%;
+            margin-right: 2%;
+            .concepto{
+                cursor: pointer;
             }
-            .cuadroIMG-verde{
-                height: 10%;
-                width: 100%;
-                margin-left: 15%;
-                margin-top: 0%;
-                img{
-                    margin-top: -9%;
-                    margin-left: -8.5%;
-                    width: 59%;
-                    height: 100%;
-                    min-height: 60px;
+            #concepto1{
+                .img1{
+                    height: 20%;
+                    width: 40%;
+                    margin-left: 59%;
+                    margin-top: 8%;
                 }
-                p{
-                    width: 50%;
-                    margin-top: -11%;
-                    color: #fff;
-                    font-size: 1vw;
-                    text-align: center;
-                }
-            }
-            .img2{
-                height: 20%;
-                width: 40%;
-                margin-right: 15%;
-                margin-top: 0%;
-            }
-            .cuadroIMG-amarillo{
-                height: 12%;
-                width: 50%;
-                margin-right: 15%;
-                margin-top: 0%;
-                img{
-                    margin-top: -19%;
-                    margin-left: -3.5%;
+               
+                .cuadroIMG-verde{
+                    height: 20%;
+                    margin-left: 15%;
+                    margin-top: -5px;
                     width: 80%;
-                    height: 100%;
-                }
-                p{
-                    width: 60%;
-                    margin-top: -21%;
-                    color: #fff;
-                    font-size: 1vw;
-                    text-align: center;
+                    img{
+                        height: 100%;
+                        margin-left: 34.5%;
+                        margin-top: -9%;
+                        width: 90%;
+                    }
+                    p{
+                        color: #fff;
+                        font-size: 1vw;
+                        margin-top: -24%;
+                        margin-left: 46%;
+                        text-align: center;
+                        width: 70%;
+                    }
                 }
             }
-            .img3{
-                height: 20%;
-                width: 40%;
-                margin-left: 15%;
-            }
-            .cuadroIMG-azul{
-                height: 25%;
-                width: 50%;
-                margin-left: 15%;
-                margin-top: 0%;
-                img{
-                    margin-top: -19%;
-                    margin-left: -3.5%;
+            #concepto2{
+                .img2{
+                    height: 20%;
+                    width: 40%;
+                    margin-left: 0%;
+                    margin-top: -50px; 
+                }
+                .cuadroIMG-amarillo{
+                    height: 20%;
+                    margin-left: -11%;
+                    margin-top: 21px;
                     width: 80%;
-                    height: 50%;
+                    img{
+                        height: 100%;
+                        margin-left: -11%;
+                        margin-top: -18%;
+                        width: 100%;
+                    }
+                    p{
+                        color: #fff;
+                        font-size: 1vw;
+                        margin-left: 9%;
+                        margin-top: -24%;
+                        text-align: center;
+                        width: 70%;
+                    }
                 }
-                p{
-                    width: 60%;
-                    margin-top: -21%;
-                    color: #fff;
-                    font-size: 1vw;
-                    text-align: center;
+            }
+            #concepto3{
+                .img3{
+                    height: 20%;
+                    width: 40%;
+                    margin-left: 80%;
+                    margin-top: -25%;
+                }
+                .cuadroIMG-azul{
+                    height: 20%;
+                    width: 80%;
+                    margin-left: 15%;
+                    margin-top: 0%;
+                    img{
+                        height: 100%;
+                        margin-left: 61.5%;
+                        margin-top: -12%;
+                        width: 90%;
+                    }
+                    p{
+                        color: #fff;
+                        font-size: 1vw;
+                        margin-left: 72%;
+                        margin-top: -25%;
+                        text-align: center;
+                        width: 70%
+                    }
                 }
             }
         }
     }
-    
 }
