--- a/src/scss/layouts/_pag20.scss
+++ b/src/scss/layouts/_pag20.scss
@@ -36,6 +36,7 @@
     #libro3.activo{
         display:block;
         margin: 5% 3% 0% 3%;
+        transition: all 0.3s ease-in-out;
     }
 
     #libro5.activo{
