--- a/src/scss/layouts/_pag20.scss
+++ b/src/scss/layouts/_pag20.scss
@@ -205,32 +205,9 @@
             }
             &:hover{
                 opacity: 0.5;
-                .animated {
-                    -webkit-animation-duration: 2s;
-                    animation-duration: 2s;
-                    -webkit-animation-fill-mode: both;
-                    animation-fill-mode: both;
-                   }
-                   @-webkit-keyframes flash {
-                    0%, 50%, 100% {
-                    opacity: 1;
-                    }
-                   25%, 75% {
-                    opacity: 0;
-                    }
-                   }
-                   @keyframes flash {
-                    0%, 50%, 100% {
-                    opacity: 1;
-                    }
-                   25%, 75% {
-                    opacity: 0;
-                    }
-                   }
-                   .flash {
-                    -webkit-animation-name: flash;
-                    animation-name: flash;
-                   }
+            }
+            #cuadro-c1{
+                @include m.parpadeo();
             }
             .cuadro-c.activo{
                 display: block;
@@ -323,6 +300,7 @@
     
         
         #maletin-amarillo{
+            @include m.parpadeo();
             display:flex;
             a{
                 .i-maletin{
