--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -676,7 +676,7 @@
          50% { opacity: 0.0; }
         100% { opacity: 1.0; }
       }
-    
+}  
 @mixin conceptual($color){
     background: v.$colorFuente;
 
