--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -110,10 +110,11 @@
     }
     .actividad21{
         background-color:#E1E7ED;
-        padding: 5%;
+        padding: 2% 2% 7% 2%;
         display: flex;
+        height: 60%;
         .columna1{
-            width: 140%;
+            width: 200%;
             .cuadroC1{
                 display: flex;
                 width: 140%;
@@ -122,11 +123,10 @@
                 margin-top: 2%;
                 cursor: pointer;
                 p{
-                    background-color: #F4F6F5;
+                    background-color: #f4f6f5;
+                    font-size: 0.85vw;
+                    height: 100%;
                     width: 90%;
-                    height: 90%;
-                    padding: 3% 3%;
-                    font-size: 1.5vh;
                    
                 }
                 
@@ -140,6 +140,32 @@
                     margin-left: 6%;
                 }
             } 
+
+            #respuesta1pag21{
+                p{
+                    padding: 3% 3%;
+                }
+            }
+            #respuesta2pag21{
+                p{
+                    padding: 3% 3%;
+                }
+            }
+            #respuesta3pag21{
+                p{
+                    padding: 3% 3%;
+                }
+            }
+            #respuesta4pag21{
+                p{
+                    padding: 2.5% 3%;
+                }
+            }
+            #respuesta5pag21{
+                p{
+                    padding: 3% 3%;
+                }
+            }
 
             .cuadroC1#respuesta1pag21{
                 p{
@@ -183,12 +209,12 @@
                 padding: 2.5%;
                 text-align: center;
                 p{
-                    background-color: #0C8F5A;
-                    width: 90%;
+                    background-color: #0c8f5a;
+                    font-size: .9vw;
                     height: 90%;
-                    font-size: 0.8vw;
+                    padding: 6% 10% 8% 9%;
                     text-align: center;
-                    padding-top: 4%;
+                    width: 90%;
                 }
                 .pin{
                     align-items: center;
@@ -283,6 +309,7 @@
 
 .contenedor21final{
     display: none;
+    height: 1200px;
     .cuadro-amarillo21{
         display: flex;
         background-color: #F9C931;
