--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -676,7 +676,20 @@
          50% { opacity: 0.0; }
         100% { opacity: 1.0; }
       }
-}  
+} 
+@mixin parpadeo0(){
+    &{
+        animation-name: parpadeo;
+        animation-duration: 0s;
+        animation-timing-function: linear;
+        animation-iteration-count: 0;
+
+        -webkit-animation-name:parpadeo;
+        -webkit-animation-duration: 0;
+        -webkit-animation-timing-function: linear;
+        -webkit-animation-iteration-count: 2;
+    }
+} 
 @mixin conceptual($color){
     background: v.$colorFuente;
 
