--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -41,6 +41,7 @@
 .contenido1pag22{
     background-color: #D2DEE8;
     height: 70%;
+    min-height: 300px;
     padding:2% 0%;
     .contenido1_1pag22{
         margin-top: 3%;
@@ -68,6 +69,7 @@
                 background-color: rgb(12, 143, 90);
                 border-radius: 10px;
                 padding: 3% 3%;
+
                 p{
                     color: #fff;
                     font-weight: bold;
@@ -117,6 +119,7 @@
                 padding: 5%;
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
+                border: 0.1px solid #FFF;
                 .triangulo{
                     img{
                         margin:0% 0% 0% 49%;
@@ -152,6 +155,7 @@
                 padding: 5%;
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
+                border: 0.1px solid #FFF;
                 .triangulo{
                     background-color: #D8FFEF;
                     img{
@@ -189,6 +193,7 @@
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
                 padding: 5%;
+                border: 0.1px solid #FFF;
                 .triangulo{
                     img{
                         margin:0% 0% 0% 49%;
@@ -216,8 +221,9 @@
         background-color: #D9EDEF;
         padding: 1%;
         .i-click{
-            width:5% ;
-            margin-left: 10%;
+            margin-left: 6%;
+            width: 8%;
+            height: 6%;
             img{
                 padding-top: 0.5%;
                 height: 0.7%;
@@ -229,22 +235,23 @@
         p{
             width: 85%;
             height: 10%;
-            padding: 0.4% 1%;
-            font-size: 1.1vw;
+            padding: 0.6% 1%;
+            //font-size: 1.1vw;
         }
     }
     .boton{
+        width: 100%;
+        height: 30%;
         input{
             align-items: center;
-            height: 10%;
-            width: 12%;
+            height: 20%;
+            width: 15%;
             background-color: #F9C931;
             border: solid 2px #fff;
             border-radius: 8px;
             color: #fff;
-            margin-left: 1%;
-            margin-top: 1%;
-            font-size: 4vh;
+            padding: 2% 1%;
+            margin: 1% 0% 0% 45%;
             @include m.telefono{
                 margin-left: 35%;
                 margin-top: 10%;
@@ -256,144 +263,233 @@
     .contenido2nv2pag22{
         display: flex;
         height: 50%;
-        min-height: 450px;
+        width: 100%;
         .opcionescolumna1{
-            margin-top: 3%;
-            width: 60%;
+            display: grid;
+            margin: 3% 0% 0% 3%;
+            width: 75%;
+            align-items: center;
             .cuadro-opcion{
-                .c-opcion{
-                    width: 4%;
-                    height: 4%;
-                    border-radius: 4%;
+                width: 60%;
+                height: 70%;
+                margin-bottom: 3%;
+                .titulo{
+                    display: none;
                 }
-                p{
-                    background-color: #fff;
-                    width: 60%;
-                    height: 15%;
-                    margin-left: 5%;
-                    padding: 4.5%;
-                    border-radius: 5px;
+                .concepto{
+                    p{
+                        background-color: #fff;
+                        padding: 4.5%;
+                        border-radius: 5px;
+                    }
+                    .img{
+                        display: none;
+                    }
                 }
             }
+            
+
             #contenedor1pag22.correcto{
-                .c-opcion{
+                display:grid;
+                .titulo{
+                    display: block;
+                    width: 100%;
+                    height: 110%;
+                    text-align: center;
+                    color: #FFF;
                     background-color: #7AA0DD;
+                    border-top-left-radius: 5px;
+                    border-top-right-radius: 5px;
                 }
-                p{
+                .concepto{
+                    display: flex;
+                    border-bottom-right-radius: 5px;
+                    border-bottom-left-radius: 5px;
                     background-color: #7AA0DD;
+                    p{
+                        width: 70%;
+                        background-color: #7AA0DD;
+                        padding: 4.5%;
+                        border-radius: 5px;
+                    }
+                    .img{
+                        display: block;
+                        height: 87%;
+                        width: 25%;
+                        padding: 1%;
+                        background-color: #7AA0DD;
+                    }
                 }
             }
             #contenedor2pag22.correcto{
-                .c-opcion{
+                display:grid;
+                .titulo{
+                    display: block;
+                    width: 100%;
+                    height: 110%;
+                    text-align: center;
                     background-color: #0C8F5A;
+                    color: #FFF;
+                    border-top-left-radius: 5px;
+                    border-top-right-radius: 5px;
                 }
-                p{
+                .concepto{
+                    display: flex;
+                    border-bottom-right-radius: 5px;
+                    border-bottom-left-radius: 5px;
                     background-color: #0C8F5A;
+                    p{
+                        width: 70%;
+                        background-color: #0C8F5A;
+                        padding: 4.5%;
+                        border-radius: 5px;
+                    }
+                    .img{
+                        display: block;
+                        height: 87%;
+                        width: 25%;
+                        padding: 1%;
+                        background-color: #0C8F5A;
+                    }
                 }
-                
             }
             #contenedor3pag22.correcto{
-                .c-opcion{
+                display:grid;
+                .titulo{
+                    display: block;
+                    width: 100%;
+                    height: 110%;
+                    text-align: center;
                     background-color: #F9C931;
+                    color: #FFF;
+                    border-top-left-radius: 5px;
+                    border-top-right-radius: 5px;
                 }
-                p{
+                .concepto{
+                    display: flex;
                     background-color: #F9C931;
+                    border-bottom-right-radius: 5px;
+                    border-bottom-left-radius: 5px;
+                    p{
+                        width: 70%;
+                        background-color: #F9C931;
+                        padding: 4.5%;
+                        border-radius: 5px;
+                    }
+                    .img{
+                        display: block;
+                        height: 87%;
+                        width: 25%;
+                        padding: 1%;
+                        background-color: #F9C931;
+                    }
                 }
-               
             }
 
         }
         .columna2-22{
-            display: block;
-            margin-right: 2%;
+            display:grid;
+            width: 25%;
+            height: 100%;
             .concepto{
                 cursor: pointer;
             }
             #concepto1{
                 .img1{
-                    height: 20%;
-                    width: 40%;
-                    margin-left: 59%;
-                    margin-top: 8%;
+                    height: 40%;
+                    margin: 0% 0 0 30%;
+                    width: 35%;
                 }
                
-                .cuadroIMG-verde{
-                    height: 20%;
-                    margin-left: 15%;
-                    margin-top: -5px;
-                    width: 80%;
-                    img{
-                        height: 100%;
-                        margin-left: 34.5%;
-                        margin-top: -9%;
-                        width: 90%;
-                    }
+                .txtP-verdePag22{
+                    height: 50%;
+                    width: 100%;
+                    //background-color: #1A1E1E;
+                    padding-left: 3%;
+                    margin: -7% 0% 0% 0%;
                     p{
                         color: #fff;
-                        font-size: 1vw;
-                        margin-top: -24%;
-                        margin-left: 46%;
+                        margin: 0% 0% 0% 0%;
+                        padding: 12%;
                         text-align: center;
-                        width: 70%;
+                        width: 90%;
+                        height: 110%;
+                        background-image: url(/build/img/contenido/Pag22/cuadro-verde.svg);
+                        background-size:100%;
+                        background-repeat: no-repeat;
+                        background-position-x: center;
+                        background-position-y: center;
+                        font-size: 1vw;
                     }
                 }
+            }
+            #concepto1.correcto{
+                display: none;
             }
             #concepto2{
                 .img2{
-                    height: 20%;
-                    width: 40%;
-                    margin-left: 0%;
-                    margin-top: -50px; 
+                    height: 40%;
+                    margin: 0% 0% 0% -23%;
+                    width: 35%;
                 }
-                .cuadroIMG-amarillo{
-                    height: 20%;
-                    margin-left: -11%;
-                    margin-top: 21px;
-                    width: 80%;
-                    img{
-                        height: 100%;
-                        margin-left: -11%;
-                        margin-top: -18%;
-                        width: 100%;
-                    }
+                .txtP-amarilloPag22{
+                    height: 50%;
+                    width: 100%;
+                    //background-color: #0aecec;
+                    padding-left: 3%;
+                    margin: -6% 0% 0% -53%;
                     p{
                         color: #fff;
-                        font-size: 1vw;
-                        margin-left: 9%;
-                        margin-top: -24%;
+                        margin: 1% 0% 0% 0%;
+                        padding: 12%;
                         text-align: center;
-                        width: 70%;
+                        width: 90%;
+                        height: 110%;
+                        background-image: url(/build/img/contenido/Pag22/cuadro-amarillo.svg);
+                        background-size:100%;
+                        background-repeat: no-repeat;
+                        background-position-x: center;
+                        background-position-y: center;
+                        font-size: 1vw;
                     }
                 }
+            }
+            #concepto2.correcto{
+                display: none;
             }
             #concepto3{
                 .img3{
-                    height: 20%;
-                    width: 40%;
-                    margin-left: 80%;
-                    margin-top: -25%;
+                    height: 40%;
+                    margin: 0% 0 0 30%;
+                    width: 35%;
                 }
-                .cuadroIMG-azul{
-                    height: 20%;
-                    width: 80%;
-                    margin-left: 15%;
-                    margin-top: 0%;
-                    img{
-                        height: 100%;
-                        margin-left: 61.5%;
-                        margin-top: -12%;
-                        width: 90%;
-                    }
+               
+                .txtP-azulPag22{
+                    height: 50%;
+                    width: 100%;
+                    //background-color: #1A1E1E;
+                    padding-left: 3%;
+                    margin: -6% 0% 0% 0%;
                     p{
                         color: #fff;
-                        font-size: 1vw;
-                        margin-left: 72%;
-                        margin-top: -25%;
+                        margin: 0% 0% 0% 0%;
+                        padding: 9%;
                         text-align: center;
-                        width: 70%
+                        width: 90%;
+                        height: 110%;
+                        background-image: url(/build/img/contenido/Pag22/cuadro-azul.svg);
+                        background-size:100%;
+                        background-repeat: no-repeat;
+                        background-position-x: center;
+                        background-position-y: center;
+                        font-size: 1vw;
                     }
                 }
             }
+            #concepto3.correcto{
+                display: none;
+            }
+
         }
     }
 }
